force-app/main/default/objects/Outcome_Indicator_Variable_Type__c/Outcome_Indicator_Variable_Type__c.object-meta.xml
<CustomObject>
    <description>Customizable by client. Example: Job Functioning, Mental Health, etc</description>
    <label>Outcome Indicator Variable Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcome Indicator Variable Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>