force-app/main/default/objects/Outcome_Indicator_Variable_Type__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this outcome indicator variable type should be available for selection</description>
    <inlineHelpText>Whether this outcome indicator variable type should be available for selection</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>