force-app/main/default/objects/Outcome_Indicator_Variable_Type__c/fields/OI_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>OI_Type_Name__c</fullName>
    <formula>Outcome_Indicator_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OI Type Name</label>
    <type>Text</type>
</CustomField>