force-app/main/default/objects/Outcome_Indicator_Variable_Type__c/fields/OIVT_Category_1_Name__c.field-meta.xml
<CustomField>
    <fullName>OIVT_Category_1_Name__c</fullName>
    <formula>Outcome_Indicator_Var_Type_Category_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OIVT Category 1 Name</label>
    <type>Text</type>
</CustomField>