force-app/main/default/objects/Outcome_Indicator_Variable_Type__c/fields/Outcome_Indicator_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator_Type__c</fullName>
    <label>Outcome Indicator Type</label>
    <referenceTo>Outcome_Indicator_Type__c</referenceTo>
    <relationshipLabel>Outcome Indicator Variable Types</relationshipLabel>
    <relationshipName>Outcome_Indicator_Type</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>