force-app/main/default/objects/Outcome_Indicator_Variable_Type__c/fields/Outcome_Indicator_Var_Type_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator_Var_Type_Category_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome Indicator Var Type Category One</label>
    <referenceTo>Outcome_Indicator_Var_Type_Category_1__c</referenceTo>
    <relationshipLabel>Outcome Indicator Variable Types</relationshipLabel>
    <relationshipName>Outcome_Indicator_Variable_Types</relationshipName>
    <type>Lookup</type>
</CustomField>