force-app/main/default/objects/Outcome_Indicator_Variable_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Outcome_Indicator_Type__c</columns>
    <columns>Outcome_Indicator_Var_Type_Category_1__c</columns>
    <columns>Outcome_Indicator_Var_Type_Category_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>